fix form visibility

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ div.image img {
 .form  {
   display: flex;
     justify-content: center;
-    height: 50vh;
+    height: 100vh;
 }
 
 form input, textarea {
